Error page design improvement
git-svn-id: svn://localhost/orphereus/trunk@104 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -246,3 +246,14 @@ p.spoiler > span.spoiler:hover {
         color:#204010;
         margin:0;
 }
+.errorMessage{
+	background:#EEaaaa;
+	text-align:center;
+	padding:2px;
+	color:#880000;
+	clear: both;
+	font-weight: bold;
+	margin-bottom: .5em;
+	border: solid 1px #FF0000;
+	-moz-border-radius: 5px;
+}
