small admin panel design improvement
git-svn-id: svn://localhost/orphereus/trunk@193 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -264,3 +264,7 @@ dl.menu dd.hidden {
 	border: solid 1px #FF0000;
 	-moz-border-radius: 5px;
 }
+.adminMenu{
+vertical-align:top;
+background: #DEDEDE;
+}
