Admin panel design improvements
git-svn-id: svn://localhost/orphereus/trunk@219 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -331,3 +331,4 @@ div a.show-hide-thread:hover {
 #x_replyform button {
 	border: 1px #666 solid; margin-left: 10px;
 }
+.logline {background: #DDDDDD;}
