implemented special board rules
git-svn-id: svn://localhost/orphereus/trunk@284 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -332,3 +332,5 @@ div a.show-hide-thread:hover {
 	border: 1px #666 solid; margin-left: 10px;
 }
 .logline {background: #DDDDDD;}
+.nomargin{margin: 0;}
+#smallFont{font-size: 70%;}
