git-svn-id: svn://localhost/orphereus/trunk@302 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -280,6 +280,10 @@ vertical-align:top;
 background: #DEDEDE;
 }
 
+.hlTable td{
+background: #DEDEDE;
+}
+
 .postername, .postertrip, .commentpostername {
 	display: inline; visibility: visible; font-weight: bold; color: #339;
 }
