git-svn-id: svn://localhost/orphereus/trunk@340 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -349,3 +349,13 @@ div a.show-hide-thread:hover {
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
 #smallFont{font-size: 70%;}
+
+.hovblock
+{
+    font-size: 140%;
+    text-align: center;
+}
+.hovblock:hover
+{
+    background: #FF6600;
+}
