--- a/fc/public/css/futaba.css
+++ b/fc/public/css/futaba.css
@@ -1,3 +1,19 @@
+﻿body { margin: 0; padding: 8px; margin-bottom: auto; }
+blockquote blockquote { margin-left: 0em }
+form { 
+margin-bottom: 0px }
+.postarea { text-align: center }
+.postarea table { margin: 0px auto; text-align: left }
+.thumb { 
+border: none; float: left; margin: 2px 20px }
+.nothumb { float: left; background: #eee; border: 2px dashed #aaa; 
+text-align: center; margin: 2px 20px; padding: 1em 0.5em 1em 0.5em; }
+.reply blockquote, blockquote :last-child { 
+margin-bottom: 0em }
+.reflink a { color: inherit; text-decoration: none }
+.reply .filesize { margin-left: 20px } 
+.userdelete { float: right; text-align: center; white-space: nowrap }
+.replypage .replylink { display: none }
 html, body {
          background:#FFFFEE;
          color:#800000;
@@ -5,8 +21,11 @@ html, body {
 a {
         color:#0000EE;
 }
-a:hover {
-        color:#DD0000;
+	a:hover {
+          color:#DD0000;
+
+}
+div.delete { 
 }
 .adminbar {
         text-align:right;
@@ -18,9 +37,10 @@ a:hover {
         text-align:center;
         font-size:2em;
         color:#800000;
-        width:100%;
+        /*width:100%;*/
 }
-.theader {
+
+.theader, .passvalid {
         background:#E04000;
         text-align:center;
         padding:2px;
@@ -30,7 +50,8 @@ a:hover {
 .postarea {
 }
 .rules {
-        font-size:0.7em;
+        font-size:10px;
+        font-family:sans-serif;
 }
 .postblock {
         background:#EEAA88;
@@ -41,12 +62,8 @@ a:hover {
         text-align:center;
         font-size:12px;
         font-family:serif;
-}
-.passvalid {
-	background:#EEAA88;
-	text-align:center;
-	width:100%;
-	color:#ffffff;
+	clear: both;
+	padding-top: 10px;
 }
 .dellist {
 	font-weight: bold;
@@ -55,7 +72,6 @@ a:hover {
 .delbuttons {
 	text-align:center;
 	padding-bottom:4px;
-
 }
 .managehead {
 	background:#AAAA66;
@@ -73,12 +89,14 @@ a:hover {
 	color:#800000;
 }
 .row2 {
-        background:#DDDDAA;
+       background:#DDDDAA;
         color:#800000;
 }
 .unkfunc {
 	background:inert;
 	color:#789922;
+}
+.reflink {
 }
 .filesize {
 	text-decoration:none;
@@ -90,13 +108,17 @@ a:hover {
 	font-weight:800;
 }
 .postername {
+	/*
 	color:#117743;
 	font-weight:bold;
+	*/
 }
 .postertrip {
+	/*
 	color:#228854;
+	*/
 }
-.oldpost {
+.oldpost, .notabene {
         color:#CC1105;
         font-weight:800;
 }
@@ -106,6 +128,13 @@ a:hover {
 .reply {
 	background:#F0E0D6;
 	color:#800000;
+}
+blockquote {
+	margin: .5em .5em .5em 1em;
+}
+
+.reply blockquote {
+	margin: .5em;
 }
 .doubledash {
  	vertical-align:top;
@@ -118,16 +147,31 @@ a:hover {
         font-weight:800;
 }
 .commentpostername {
+	/*
         color:#117743;
 	font-weight:800;
+*/
 }
 .thumbnailmsg {
 	font-size: small;
 	color:#800000;
 }
-
-
-
+hr {
+	border-style: solid none none none;
+	border-width: 1px;
+	border-color: #BBBBBB;
+}
+table {
+	border-style: none;
+}
+table td {
+	border-style: none;
+}
+.nothumb {
+	background-color: #FFFFFF;
+	border-style: dotted;
+	margin: .3em .5em;
+}
 .abbrev {
         color:#707070;
 }
@@ -135,4 +179,170 @@ a:hover {
 	background:#F0E0D6;
 	color:#800000;
 	border: 2px dashed #EEAA88;
+}
+dl.menu dt {
+	background:#DDDDDD;
+	border: solid 1px #CCCCCC;
+	margin-top: 1em;
+	padding-left: .5em;
+	cursor: pointer;
+	
+}
+dl.menu dd {
+	margin-left: .5em;
+	padding-left: .5em;
+	border-left: solid 1px #CCCCCC;
+}
+dl.menu dd.hidden {
+	display: none;
+}
+.signature {
+        background: #00FF00;
+        color: #00AA00;
+}
+.signature a {
+        color: #006600;
+}
+.signature a:hover {
+        color: #003300;
+}
+
+.badsignature {
+        background: #FF0000;
+        color: #AA0000;
+}
+.badsignature a {
+        color: #660000;
+}
+.badsignature a:hover {
+        color: #330000;
+}
+
+.postbody blockquote {
+        background:inherit;
+ color:#789922;
+}
+.postbody blockquote blockquote{
+        color:#406010;
+        margin:0;
+}
+.postbody blockquote blockquote blockquote{
+        color:#204010;
+        margin:0;
+}
+.spoiler {
+	background: #F0D0B6;
+	color: #F0D0B6;
+}
+.spoiler blockquote{
+	background: #B3E6B3 !important;
+	color: #B3E6B3 !important;
+}
+.spoiler:hover {
+	background: #F0D0B6;
+	color: #800000;
+}
+.spoiler:hover blockquote{
+	color:#789922 !important;
+}
+.spoiler blockquote:hover {
+	color:#789922 !important;
+}
+.errorMessage{
+	background:#EEaaaa;
+	text-align:center;
+	padding:2px;
+	color:#880000;
+	clear: both;
+	font-weight: bold;
+	margin-bottom: .5em;
+	border: solid 1px #117743;
+}
+.adminMenu{
+vertical-align:top;
+background:#F0E0D6;
+
+}
+
+.hlTable td{
+background:#F0E0D6;
+
+}
+
+.postername, .postertrip, .commentpostername {
+	display: inline; visibility: visible; font-weight: bold; color: #339;
+}
+.postertrip {
+	color: #993;
+}
+.hidden-thread {
+	color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
+}
+form > div + br[clear="left"] {
+display: block; height: 1px;
+}
+.reply label {
+font-size: 80%; color: #666;
+}
+.reply label span {
+font-size: 125%; 
+}
+label, label input {
+vertical-align: middle;
+}
+a.loading {
+	padding-left: 16px;
+	background: url('images/loading.gif') no-repeat left center;
+}
+.x_unfoldreply td {
+	border-color: #EEAA88;
+}
+.x_qrattached:hover {
+	border-bottom: 1px #ccc dotted;
+}
+div a.show-hide-thread {
+	display: block; float: right; font-size: 70%; text-decoration: none;
+}
+div a.show-hide-thread:hover {
+	text-decoration: underline; color: #f33;
+}
+#x_replyform {
+	display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px; 
+	background-color: #F0E0D6;
+;
+; 
+}
+#x_replyform textarea {
+	width: 100%; border: 1px #EEAA88; solid;
+}
+#x_replyform div {
+	overflow: hidden; margin-top: 5px;
+}
+#x_replyform label {
+	float: left; margin-right: 10px;
+}
+#x_replyform input[type="text"], #x_replyform input[type="password"] {
+	border: 1px #EEAA88; solid;
+}
+#x_replyform input[type="file"] > input[type="text"] {
+	border: 1px #EEAA88; solid;
+} 
+#x_replyform input[type="submit"] {
+
+}
+#x_replyform button {
+	
+}
+.logline {background: #DDDDDD;}
+.nomargin{margin: 0;}
+#smallFont{font-size: 70%;}
+
+.hovblock
+{
+    font-size: 140%;
+    text-align: center;
+}
+.hovblock:hover
+{
+    background: #FF6600;
 }
