--- a/fc/public/css/gurochan.css
+++ b/fc/public/css/gurochan.css
@@ -1,3 +1,19 @@
+﻿body { margin: 0; padding: 8px; margin-bottom: auto; }
+blockquote blockquote { margin-left: 0em }
+form { 
+margin-bottom: 0px }
+.postarea { text-align: center }
+.postarea table { margin: 0px auto; text-align: left }
+.thumb { 
+border: none; float: left; margin: 2px 20px }
+.nothumb { float: left; background: #eee; border: 2px dashed #aaa; 
+text-align: center; margin: 2px 20px; padding: 1em 0.5em 1em 0.5em; }
+.reply blockquote, blockquote :last-child { 
+margin-bottom: 0em }
+.reflink a { color: inherit; text-decoration: none }
+.reply .filesize { margin-left: 20px } 
+.userdelete { float: right; text-align: center; white-space: nowrap }
+.replypage .replylink { display: none }
 html, body {
   font-size:10pt;
   background:#EDDAD2;
@@ -27,31 +43,70 @@ a.quotelink {
   background:inherit;
   color:#DD0000;
 }
+
+div.delete { 
+}
+.adminbar {
+  text-align: center;
+}
 .logo {
   clear:both;
   text-align:center;
   background:inherit;
   font-size:24pt;
   color:#AF0A0F;
-  width:100%;
+  /*width:100%;*/
+}
+
+.theader, .passvalid {
 }
 .postarea {
   background:inherit;
 }
+.rules {
+        font-size:10px;
+        font-family:sans-serif;
+}
 .postblock {
-  background: #D9AF9E;
+ background: #D9AF9E;
   border: 1px solid #CA927B;
   color: black;
   font-weight: bold;
   padding: 2px 5px 2px 5px;
+
 }
 .footer {
   text-align:center;
   font-size:12px;
 }
+.dellist {
+	font-weight: bold;
+	text-align:center;
+}
+.delbuttons {
+	text-align:center;
+	padding-bottom:4px;
+}
+.managehead {
+	background:#AAAA66;
+	color:#400000;
+	padding:0px;
+}
+.postlists {
+	background:#FFFFFF;
+	width:100%;
+	padding:0px;
+	color:#800000;
+}
+.row1 {
+}
+.row2 {
+}
 .unkfunc {
 	background:inert;
 	color:#789922;
+}
+.reflink {
 }
 .filesize {
 	text-decoration:none;
@@ -62,16 +117,20 @@ a.quotelink {
 	font-weight:800;
 }
 .postername {
+	/*
   background:inherit;
   font-size:11pt;
   color:#117743;
   font-weight: bold;
+	*/
 }
 .postertrip {
+	/*
 	background:inherit;
 	color:#228854;
+	*/
 }
-.oldpost {
+.oldpost, .notabene {
   background:inherit;
   color:#0F0C5D;
   font-weight:800;
@@ -85,9 +144,12 @@ a.quotelink {
 	color:#000000;
 	border:1px solid #CA927B;
 }
-.replyhl {
-	background:#D6BAD0;
-	color:#000000;
+blockquote {
+	margin: .5em .5em .5em 1em;
+}
+
+.reply blockquote {
+	margin: .5em;
 }
 .doubledash {
  	vertical-align:top;
@@ -101,19 +163,193 @@ a.quotelink {
   font-weight:800;
 }
 .commentpostername {
-  background:inherit;
+	/*
+   background:inherit;
   font-size:11pt;
   color:#117743;
   font-weight: bold;
+	font-weight:800;
+*/
 }
-a.quotejs {
-  color:#000000;
-	text-decoration: none;
+.thumbnailmsg {
 }
-a.quotejs:hover {
-  font-weight:bold;
+hr {
+}
+table {
+	border-style: none;
+}
+table td {
+	border-style: none;
+}
+.nothumb {
+	background-color: #FFFFFF;
+	border-style: dotted;
+	margin: .3em .5em;
+}
+.abbrev {
+        color:#707070;
+}
+.highlight {
+}
+dl.menu dt {
+	background:#DDDDDD;
+	border: solid 1px #CCCCCC;
+	margin-top: 1em;
+	padding-left: .5em;
+	cursor: pointer;
+	
+}
+dl.menu dd {
+	margin-left: .5em;
+	padding-left: .5em;
+	border-left: solid 1px #CCCCCC;
+}
+dl.menu dd.hidden {
+	display: none;
+}
+.signature {
+        background: #00FF00;
+        color: #00AA00;
+}
+.signature a {
+        color: #006600;
+}
+.signature a:hover {
+        color: #003300;
 }
 
-.adminbar {
-  text-align: center;
+.badsignature {
+        background: #FF0000;
+        color: #AA0000;
+}
+.badsignature a {
+        color: #660000;
+}
+.badsignature a:hover {
+        color: #330000;
+}
+
+.postbody blockquote {
+        background:inherit;
+ color:#789922;
+}
+.postbody blockquote blockquote{
+        color:#406010;
+        margin:0;
+}
+.postbody blockquote blockquote blockquote{
+        color:#204010;
+        margin:0;
+}
+.spoiler {
+	background-color: #E6CBC0;
+	color: #E6CBC0;
+}
+.spoiler blockquote{
+	background: #E6CBC0; !important;
+	color: #E6CBC0; !important;
+}
+.spoiler:hover {
+	background: #E6CBC0;
+	color: #000000;
+}
+.spoiler:hover blockquote{
+	color:#789922 !important;
+}
+.spoiler blockquote:hover {
+	color:#789922 !important;
+}
+.errorMessage{
+	background:#EEaaaa;
+	text-align:center;
+	padding:2px;
+	color:#880000;
+	clear: both;
+	font-weight: bold;
+	margin-bottom: .5em;
+	border: solid 1px #117743;
+}
+.adminMenu{
+vertical-align:top;
+background:#D9AF9E;
+}
+
+.hlTable td{
+background:#D9AF9E;
+}
+
+.postername, .postertrip, .commentpostername {
+	display: inline; visibility: visible; font-weight: bold; color: #339;
+}
+.postertrip {
+	color: #993;
+}
+.hidden-thread {
+	color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
+}
+form > div + br[clear="left"] {
+display: block; height: 1px;
+}
+.reply label {
+font-size: 80%; color: #666;
+}
+.reply label span {
+font-size: 125%; 
+}
+label, label input {
+vertical-align: middle;
+}
+a.loading {
+	padding-left: 16px;
+	background: url('images/loading.gif') no-repeat left center;
+}
+.x_unfoldreply td {
+	border-color: #EEAA88;
+}
+.x_qrattached:hover {
+	border-bottom: 1px #ccc dotted;
+}
+div a.show-hide-thread {
+	display: block; float: right; font-size: 70%; text-decoration: none;
+}
+div a.show-hide-thread:hover {
+	text-decoration: underline; color: #f33;
+}
+#x_replyform {
+	display: block; border: 1px solid #CA927B; margin: 0 2px 2px 2px; padding: 5px; 
+	background-color: #D9AF9E;
+}
+#x_replyform textarea {
+	width: 100%; border: 1px solid #CA927B;
+}
+#x_replyform div {
+	overflow: hidden; margin-top: 5px;
+}
+#x_replyform label {
+	float: left; margin-right: 10px;
+}
+#x_replyform input[type="text"], #x_replyform input[type="password"] {
+	border: 1px solid #CA927B;
+}
+#x_replyform input[type="file"] > input[type="text"] {
+	border: 1px solid #CA927B;
+} 
+#x_replyform input[type="submit"] {
+
+}
+#x_replyform button {
+border: 1px solid #CA927B; background-color: #E6CBC0;	
+}
+.logline {background: #DDDDDD;}
+.nomargin{margin: 0;}
+#smallFont{font-size: 70%;}
+
+.hovblock
+{
+    font-size: 140%;
+    text-align: center;
+}
+.hovblock:hover
+{
+    background: #FF6600;
 }
