--- a/fc/public/css/burichan.css
+++ b/fc/public/css/burichan.css
@@ -1,13 +1,30 @@
+﻿body { margin: 0; padding: 8px; margin-bottom: auto; }
+blockquote blockquote { margin-left: 0em }
+form { 
+margin-bottom: 0px }
+.postarea { text-align: center }
+.postarea table { margin: 0px auto; text-align: left }
+.thumb { 
+border: none; float: left; margin: 2px 20px }
+.nothumb { float: left; background: #eee; border: 2px dashed #aaa; 
+text-align: center; margin: 2px 20px; padding: 1em 0.5em 1em 0.5em; }
+.reply blockquote, blockquote :last-child { 
+margin-bottom: 0em }
+.reflink a { color: inherit; text-decoration: none }
+.reply .filesize { margin-left: 20px } 
+.userdelete { float: right; text-align: center; white-space: nowrap }
+.replypage .replylink { display: none }
 html, body {
-         font-size:12pt;
+          font-size:12pt;
          background:#EEF2FF;
          color:#000000;
 }
-a       {
+a {
         background:inherit;
         color:#34345C;
         text-decoration:none;
         font-family:sans-serif;
+	font-size:10pt;
 }
 a:visited {
         background:inherit;
@@ -15,11 +32,14 @@ a:visited {
         text-decoration:none;
         font-family:sans-serif;
 }
+
 a:hover {
         color:#DD0000;
         background:inherit;
         text-decoration:underline;
         font-family:sans-serif;
+}
+div.delete { 
 }
 .adminbar {
         text-align:right;
@@ -33,9 +53,10 @@ a:hover {
         background:inherit;
         font-size:24pt;
         color:#AF0A0F;
-        width:100%;
+        /*width:100%;*/
 }
-.theader {
+
+.theader, .passvalid {
         background:#0010E0;
         color:#FFFFFF;
         width:100%;
@@ -44,24 +65,23 @@ a:hover {
         background:inherit;
 }
 .rules {
-        font-size:10px;
+        font-size:11px;
         font-family:sans-serif;
 }
 .postblock {
-        background:#9988EE;
+          background:#9988EE;
         color:#000000;
         font-weight:800;
 }
 .footer {
-        text-align:center;
+       text-align:center;
         font-size:10px;
         font-family:sans-serif;
+	clear: both;
+	padding-top: 10px;
 }
-.passvalid {
-	background:#9988EE;
-	text-align:center;
-	width:100%;
-	color:#ffffff;
+.footer a {
+	font-size:10px;
 }
 .dellist {
 	background:inherit;
@@ -71,7 +91,6 @@ a:hover {
 	background:inherit;
 	text-align:center;
 	padding-bottom:4px;
-
 }
 .managehead {
 	background:#0F8FE1;
@@ -102,6 +121,8 @@ a:hover {
 	background:#C4C2EE;
 	color:#FFFFFF;
 }
+.reflink {
+}
 .filesize {
 	font-size:12px;
 	font-family:sans-serif;
@@ -116,13 +137,20 @@ a:hover {
 	font-weight:800;
 }
 .postername {
+	/*
 	background:inherit;
-	font-size:12px;
+	font-size:15px;
 	font-family:serif;
 	color:#117743;
 	font-weight:800;
+	*/
 }
-.oldpost {
+.postertrip {
+	/*
+	color:#228854;
+	*/
+}
+.oldpost, .notabene {
         background:inherit;
         font-size:18px;
         font-family:serif;
@@ -141,6 +169,13 @@ a:hover {
 	color:#000000;
 	font-family:serif;
 }
+blockquote {
+	margin: .5em .5em .5em 1em;
+}
+
+.reply blockquote {
+	margin: .5em;
+}
 .doubledash {
  	vertical-align:top;
 	clear:both;
@@ -154,15 +189,206 @@ a:hover {
         font-weight:800;
 }
 .commentpostername {
+	/*
         background:inherit;
-        font-size:12px;
+        font-size:15px;
         font-family:serif;
         color:#117743;
         font-weight:800;
+*/
 }
 .thumbnailmsg {
 	background:inherit;
 	font-size:9px;
 	font-family:sans-serif;
 	color:#000000;
+}
+hr {
+	border-style: solid none none none;
+	border-width: 1px;
+	border-color: #BBBBBB;
+}
+table {
+	border-style: none;
+}
+table td {
+	border-style: none;
+}
+.nothumb {
+	background-color: #FFFFFF;
+	border-style: dotted;
+	margin: .3em .5em;
+}
+.abbrev {
+        color:#707070;
+}
+.highlight {
+	background:background:#D6DAF0;
+	border: 2px dashed #34345C;
+}
+dl.menu dt {
+	background:#DDDDDD;
+	border: solid 1px #CCCCCC;
+	margin-top: 1em;
+	padding-left: .5em;
+	cursor: pointer;
+	
+}
+dl.menu dd {
+	margin-left: .5em;
+	padding-left: .5em;
+	border-left: solid 1px #CCCCCC;
+}
+dl.menu dd.hidden {
+	display: none;
+}
+.signature {
+        background: #00FF00;
+        color: #00AA00;
+}
+.signature a {
+        color: #006600;
+}
+.signature a:hover {
+        color: #003300;
+}
+
+.badsignature {
+        background: #FF0000;
+        color: #AA0000;
+}
+.badsignature a {
+        color: #660000;
+}
+.badsignature a:hover {
+        color: #330000;
+}
+
+.postbody blockquote {
+	background:#C4C2EE;
+	color:#FFFFFF;
+}
+.postbody blockquote blockquote{
+	background:#C4C2EE;
+	color:#FFFFFF;
+}
+.postbody blockquote blockquote blockquote{
+        color:#204010;
+        margin:0;
+background:#C4C2EE;
+}
+.spoiler {
+	background: #C4C2EE;
+	color: #C4C2EE;
+}
+.spoiler blockquote{
+	background: #C4C2EE; !important;
+	color: #C4C2EE; !important;
+}
+.spoiler:hover {
+	background: #C4C2EE;
+	color: #000000;
+}
+.spoiler:hover blockquote{
+	color:#789922 !important;
+}
+.spoiler blockquote:hover {
+	color:#789922 !important;
+}
+.errorMessage{
+	background:#EEaaaa;
+	text-align:center;
+	padding:2px;
+	color:#880000;
+	clear: both;
+	font-weight: bold;
+	margin-bottom: .5em;
+	border: solid 1px #117743;
+}
+.adminMenu{
+vertical-align:top;
+background:#D6DAF0;
+
+
+}
+
+.hlTable td{
+background:#D6DAF0;
+
+}
+
+.postername, .postertrip, .commentpostername {
+	display: inline; visibility: visible; font-weight: bold; color: #339;
+}
+.postertrip {
+	color: #993;
+}
+.hidden-thread {
+	color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
+}
+form > div + br[clear="left"] {
+display: block; height: 1px;
+}
+.reply label {
+font-size: 80%; color: #666;
+}
+.reply label span {
+font-size: 125%; 
+}
+label, label input {
+vertical-align: middle;
+}
+a.loading {
+	padding-left: 16px;
+	background: url('images/loading.gif') no-repeat left center;
+}
+.x_unfoldreply td {
+	border-color: #EEAA88;
+}
+.x_qrattached:hover {
+	border-bottom: 1px #ccc dotted;
+}
+div a.show-hide-thread {
+	display: block; float: right; font-size: 70%; text-decoration: none;
+}
+div a.show-hide-thread:hover {
+	text-decoration: underline; color: #f33;
+}
+#x_replyform {
+	display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px; 
+	background-color: #D6DAF0;
+}
+#x_replyform textarea {
+	width: 100%; border: 1px #EEAA88; solid;
+}
+#x_replyform div {
+	overflow: hidden; margin-top: 5px;
+}
+#x_replyform label {
+	float: left; margin-right: 10px;
+}
+#x_replyform input[type="text"], #x_replyform input[type="password"] {
+	border: 1px #EEAA88; solid;
+}
+#x_replyform input[type="file"] > input[type="text"] {
+	border: 1px #EEAA88; solid;
+} 
+#x_replyform input[type="submit"] {
+
+}
+#x_replyform button {
+	
+}
+.logline {background: #DDDDDD;}
+.nomargin{margin: 0;}
+#smallFont{font-size: 70%;}
+
+.hovblock
+{
+    font-size: 140%;
+    text-align: center;
+}
+.hovblock:hover
+{
+    background: #FF6600;
 }
