--- a/fc/public/css/std.css
+++ b/fc/public/css/std.css
@@ -1,15 +1,14 @@
-body {background-color: #e9e9e9; color: #662f00; margin: 0 0 0 0; font-family: Verdana;}
+body {background-color: #ffffff; color: #3b3b3b; margin: 0 0 0 0; font-family: Verdana;}
 a {
-        color: #662f00;
+        color: #6b6b6b;
 }
 a:hover {
-        color: #eb6d00;
+        color: #AbAbAb;
 }
 .title{
 	float: right; 
-	clear: both; 
-	font-weight: 
-	bold; font-size: 130%; 
+	font-weight: bold;
+    font-size: 130%; 
 	padding: 10px; 
 	background-color: #cacaca; 
 	color: #6b6b6b;
@@ -17,27 +16,25 @@ a:hover {
 
 input, textarea
 {
-   -moz-border-radius-bottomleft:5px;
-   -moz-border-radius-bottomright:5px;
-   -moz-border-radius-topleft:5px;
-   -moz-border-radius-topright:5px;
-   background-color: #eb6d00;
-   border-radius: 3px;
-   border: solid 2px #964600;   
-   color: #ffFFff;
+   text-align: center;
+   background-color: #eaeaea;
+   border: solid 2px #cacaca; 
+   border-left: none;   
+   border-right: none;
+   color: #6b6b6b;
    font-weight: bold;
    font-size: 130%;
 }
 
 input:hover, textarea
 {
-   border-color: #febc83;   
+   border-color: #bababa;   
 }
 
 input:focus, textarea
 {
-   background-color: #febc83;   
-   color: #8a460b;
+   background-color: #fafafa;   
+   color: #6b6b6b;
 }
 
 .footer {
@@ -55,12 +52,7 @@ input:focus, textarea
 	text-align:center;
 	padding:2px;
 	color: #EEaaaa;
-	/*clear: both;*/s
 	font-weight: bold;
-	/*margin-bottom: .5em;
-	border: solid 1px #FF0000;
-	-moz-border-radius: 5px;
-	*/
 }
 .errorText{
 	margin: 0;
@@ -70,8 +62,4 @@ input:focus, textarea
 	color:#880000 ;
 	font-weight: bold;
 	border-left: solid 50px #880000;
-	/*margin-bottom: .5em;
-	border: solid 1px #FF0000;
-	-moz-border-radius: 5px;
-	*/
 }
