--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -368,3 +368,9 @@ background: #A8A8A8;
 #x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
 #x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
 #x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
+
+.img_loading{
+left:50px;
+margin-top:50px;
+position:absolute;
+}
