--- a/fc/public/css/bluemoon.css
+++ b/fc/public/css/bluemoon.css
@@ -427,4 +427,16 @@ div a.show-hide-thread:hover {
 background: #A8A8A8;
 }
 
-#x_replyform_goto{width: 120px}
+#x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
+#x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
+#x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
+
+.img_loading{
+    margin-top: 15px;
+    margin-left: -120px;
+    z-index: 10;
+    background-color:#FFFFFF;
+    border: 2px solid #34345C;
+    color: #49525D;
+    -moz-border-radius: 6px;
+}
