--- a/fc/public/css/gurochan.css
+++ b/fc/public/css/gurochan.css
@@ -190,6 +190,9 @@ table td {
         color:#707070;
 }
 .highlight {
+    background:#EEDACB;
+    color:#333333;
+    border: 2px dashed #EE6600;
 }
 dl.menu dt {
 	background:#DDDDDD;
@@ -360,3 +363,12 @@ background: #A8A8A8;
 #x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
 #x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
 #x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
+
+.img_loading{
+    margin-top: 15px;
+    margin-left: -120px;
+    z-index: 10;
+    background:#EEDACB;
+    color:#333333;
+    border: 2px dashed #EE6600;
+}
